[package]
name = "nb-to-query-derive"
version = "0.1.1"
edition = "2021"
description = "simple macro for converting struct to http query string"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = "2.0.39"
